# swagger.json
@@ -3,7 +3,80 @@
 	"consumes": [
 		"application/json"
 	],
-	"definitions": {},
+	"definitions": {
+		"Name": {
+			"properties": {
+				"first": {
+					"type": "string"
+				},
+				"last": {
+					"type": "string",
+					"x-nullable": true
+				}
+			},
+			"required": [
+				"first"
+			],
+			"type": "object"
+		},
+		"User": {
+			"properties": {
+				"id": {
+					"type": "number",
+					"format": "double"
+				},
+				"email": {
+					"type": "string"
+				},
+				"name": {
+					"$ref": "#/definitions/Name"
+				},
+				"status": {
+					"type": "string",
+					"enum": [
+						"Happy",
+						"Sad"
+					],
+					"x-nullable": true
+				},
+				"phoneNumbers": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					}
+				}
+			},
+			"required": [
+				"id",
+				"email",
+				"name",
+				"phoneNumbers"
+			],
+			"type": "object"
+		},
+		"UserCreationRequest": {
+			"properties": {
+				"email": {
+					"type": "string"
+				},
+				"name": {
+					"$ref": "#/definitions/Name"
+				},
+				"phoneNumbers": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					}
+				}
+			},
+			"required": [
+				"email",
+				"name",
+				"phoneNumbers"
+			],
+			"type": "object"
+		}
+	},
 	"info": {
 		"title": "microservice-boilerplate",
 		"version": "1.0.0",
@@ -12,7 +85,64 @@
 			"name": "ISC"
 		}
 	},
-	"paths": {},
+	"paths": {
+		"/Users/{id}": {
+			"get": {
+				"operationId": "GetPrivateUser",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/User"
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"format": "double",
+						"type": "number"
+					},
+					{
+						"in": "header",
+						"name": "Authorization",
+						"required": true,
+						"type": "string"
+					}
+				]
+			}
+		},
+		"/Users": {
+			"post": {
+				"operationId": "CreateUser",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"201": {
+						"description": "Created"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "requestBody",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/UserCreationRequest"
+						}
+					}
+				]
+			}
+		}
+	},
 	"produces": [
 		"application/json"
 	],
